--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ html {
 } */
 
 .container_1{
-  background-image: url("main_img.jpg");
+  background-image: url("images/main_img.jpg");
   background-position-y: center;
   background-size: cover;
   height: 100vh;
@@ -150,7 +150,7 @@ html {
   /* display: flex; */
   padding: 20px;
   flex-direction: column;
-  background-color: rgb(61, 61, 61);
+  background-color: rgb(0, 0, 0);
   /* background-color: #0057b7; */
   /* border: 1px solid yellow; */
   /* background-image: linear-gradient(147deg, #0057b7 0%, #ffd700 74%); */
@@ -159,9 +159,13 @@ html {
 .subtitle{
   font-family: "Fira Sans", sans-serif;
   color: #DAA520;
+  /* text-decoration:underline; */
+  /* text-shadow: 2px 0 0 #DAA520, 0 -2px 0 #DAA520, 0 2px 0 #DAA520, -2px 0 0 #DAA520, 0.5vw 0.5vw #DAA520; */
+  /* text-shadow: 1px 1px 1px grey; */
   /* margin-top: 30px; */
   text-align: center;
   height: 8vh;
+  /* font-weight: 800; */
   font-size: 4em;
   /* text-decoration: underline; */
   /* margin-top: 20px; */
@@ -215,7 +219,7 @@ html {
   display: flex;
   flex-direction: row;
   width: 30vw;
-  height: 15vw;
+  height: 18vw;
   border-radius: 25px;
   background-color: white;
   font-family: "Fira Sans", sans-serif;
@@ -231,9 +235,9 @@ html {
   /* top: -30vw; */
   left: -5vw;
   width: 15vw;
-  height: 15vw;
+  height: 18vw;
   /* background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%); */
-  background-image: url(hope_img_1.jpg);
+  background-image: url(images/default_org_img.jpg);
   background-position-x: -15px;
   background-size: cover;
   border-radius: 20px;
@@ -301,6 +305,12 @@ html {
 
 .org_donate:hover{
   background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%)
+}
+
+a:link, a:visited {
+  /* color: (internal value); */
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .footer{
@@ -392,7 +402,7 @@ html {
     width: 60vw;
     height: 70vw;
     /* background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%); */
-    background-image: url(hope_img_1.jpg);
+    background-image: url(images/default_org_img.jpg);
     background-position-x: -15px;
     background-size: cover;
     border-radius: 20px;
