--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ html {
 .subtitle{
   font-family: "Fira Sans", sans-serif;
   color: #DAA520;
-  /* text-decoration:underline; */
+  /* text-decoration:overline; */
   /* text-shadow: 2px 0 0 #DAA520, 0 -2px 0 #DAA520, 0 2px 0 #DAA520, -2px 0 0 #DAA520, 0.5vw 0.5vw #DAA520; */
   /* text-shadow: 1px 1px 1px grey; */
   /* margin-top: 30px; */
@@ -433,7 +433,7 @@ a:link, a:visited {
     max-height: 150%;
     min-height: 150%;
     height: 150%;
-    font-size: 4vh;
+    font-size: 2.5vh;
     /* line-height: 2; */
     /* height: auto; */
 
