--- a/styles.css
+++ b/styles.css
@@ -434,7 +434,7 @@ a:link, a:visited {
     min-height: 150%;
     height: 150%;
     font-size: 2.5vh;
-    /* line-height: 2; */
+    line-height: 1.1;
     /* height: auto; */
 
     /* font-size: 10px; */
