--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ html {
   background-position-y: center;
   background-size: cover;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
 }
 
@@ -96,6 +97,7 @@ html {
 
 .container_2{
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   padding: 20px;
   flex-direction: column;
   background-color: rgb(0, 0, 0);
@@ -106,16 +108,19 @@ html {
   color: #DAA520;
   text-align: center;
   height: 8vh;
+  height: calc(var(--vh, 1vh) * 8);
   font-size: 4em;
 }
 
 .description{
   margin: auto;
   margin-top: 2vh;
+  margin-top: calc(var(--vh, 1vh) * 2);
   text-align: center;
   font-family: "Fira Sans", sans-serif;
   width: 70vw;
   height: 86vh;
+  height: calc(var(--vh, 1vh) * 86);
   line-height: 1.3;
   color: #FFF8DC;
 }
@@ -241,6 +246,7 @@ a:link, a:visited {
 
   .title{
     font-size: 5vh;
+    font-size: calc(var(--vh, 1vh) * 5);
     text-shadow: 2px 0 0 #DAA520, 0 -2px 0 #DAA520, 0 2px 0 #DAA520, -2px 0 0 #DAA520, 0.3vh 0.3vh #DAA520;
   }
 
@@ -249,17 +255,22 @@ a:link, a:visited {
     color: #DAA520;
     text-align: center;
     height: 8vh;
+    height: calc(var(--vh, 1vh) * 8);
     font-size: 5vh;
+    font-size: calc(var(--vh, 1vh) * 5);
   }
 
   .description{
     margin: auto;
     margin-top: 2vh;
+    margin-top: calc(var(--vh, 1vh) * 2);
     height: 86vh;
+    height: calc(var(--vh, 1vh) * 86);
     text-align: center;
     font-family: "Fira Sans", sans-serif;
     width: 70vw;
     font-size: 2.5vh;
+    font-size: calc(var(--vh, 1vh) * 2.5);
     color: #FFF8DC;
   }
 
@@ -318,6 +329,7 @@ a:link, a:visited {
     min-height: 150%;
     height: 150%;
     font-size: 2.5vh;
+    font-size: calc(var(--vh, 1vh) * 2.5);
     line-height: 1.1;
     color: #4e4a67;
 
@@ -335,6 +347,7 @@ a:link, a:visited {
     color: #fff;
     font-weight: 500;
     font-size: 2.5vh;
+    font-size: calc(var(--vh, 1vh) * 2.5);
   }
 
   .footer{
